--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KM2PDRJ');</script>
+    <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Secrets</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.7c25a02a137df81c1ced.bundle.css" rel="stylesheet"/></head>
+</head>
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KM2PDRJ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.4a6566571e3234d96f05.bundle.js"></script><script type="text/javascript" src="polyfills.0ff51893bf8b41bfcd3f.bundle.js"></script><script type="text/javascript" src="vendor.2decd7aeee9161efeaaf.bundle.js"></script><script type="text/javascript" src="main.549960e70a764a0166b0.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
